[gd_scene load_steps=12 format=3 uid="uid://chutc62qlme57"]

[ext_resource type="Texture2D" uid="uid://cdb4opb748qgj" path="res://sprites/tilesets/plains.png" id="1_icf2x"]
[ext_resource type="Script" path="res://scripts/cliff_side.gd" id="1_we0c0"]
[ext_resource type="Texture2D" uid="uid://bo8mqixg4soo" path="res://sprites/tilesets/grass.png" id="2_bm0nv"]
[ext_resource type="Texture2D" uid="uid://c43s6ka5b0a0d" path="res://sprites/objects/objects.png" id="3_6quxc"]
[ext_resource type="PackedScene" uid="uid://osigr25ushiy" path="res://scenes/player.tscn" id="4_8leq4"]
[ext_resource type="PackedScene" uid="uid://c68gy8ns34iwe" path="res://scenes/apple_tree.tscn" id="6_t4w77"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_umt88"]
texture = ExtResource("1_icf2x")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r2jbg"]
texture = ExtResource("2_bm0nv")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b5kop"]
texture = ExtResource("3_6quxc")
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.5, 11.5, 4, 11.5, 9.5, 14.5, 11.5, 21.5, 9.5, 26.5, -3.5, 26, -10.5, 21.5, -12, 14)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.5, 1, 15, 11, 9.5, 14.5, -9.5, 14.5, -14.5, 11, -14.5, 0.5)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.5, 13.5, 5, 17.5, 4.5, 20.5, 0, 21, -4.5, 19.5, -5, 15)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0.5, 10.5, 4.5, 8, 8, -5.5, 8, -11, 5.5, -8, -1.5)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.5, 4.5, 4.5, 8, -1.5, 8, -4, 6, -7, 4, -7, 0, 6.5, 0.5)
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6, 2, 0, 5, -6, 2, 0, 1.5)

[sub_resource type="TileSet" id="TileSet_50ju5"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_umt88")
sources/1 = SubResource("TileSetAtlasSource_r2jbg")
sources/2 = SubResource("TileSetAtlasSource_b5kop")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qsho"]
size = Vector2(37, 41)

[node name="cliff_side" type="Node2D"]
script = ExtResource("1_we0c0")

[node name="TileMap2" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_50ju5")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(65537, 1, 0, 4, 1, 0, 131082, 1, 0, 65549, 1, 0, 15, 1, 0, 131090, 1, 0, 262162, 1, 0, 196624, 1, 0, 196622, 1, 0, 196616, 1, 0, 196613, 1, 0, 262146, 131072, 1, 589822, 1, 0, 393215, 1, 0, -65538, 1, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -65534, 1, 0, 3, 1, 0, 131078, 1, 0, 131079, 1, 0, 196617, 1, 0, 262154, 131072, 1, 393228, 1, 0, 393229, 1, 0, 458765, 1, 0, 458766, 1, 0, 524302, 1, 0, 524303, 1, 0, 327690, 131072, 2, 327689, 262144, 0, 262152, 131072, 1, 196615, 1, 0, 65540, 1, 0, -65535, 1, 0, -131070, 1, 0, -131069, 1, 0, 6, 1, 0, 327692, 1, 0, 458767, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -65517, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 655358, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 65536, 1, 655367, 131072, 1, 655368, 196608, 1, 655369, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, -1, 1, 0, 0, 1, 0, 262150, 131072, 1, 262151, 131072, 1, 327688, 131072, 1, 393225, 196608, 2, 393226, 1, 0, 524300, 1, 0, 524301, 1, 0, 589838, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 458751, 1, 0, 524287, 1, 0, 589823, 1, 0, 655359, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, -65536, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 65536, 2, 393218, 131072, 2, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 589825, 1, 0, 458753, 1, 0, 524289, 1, 0, 327682, 131072, 1, 196610, 1, 0, 131074, 1, 0, -65533, 1, 0, 196611, 1, 0, 262147, 131072, 1, 327683, 131072, 1, 393219, 131072, 2, 458755, 1, 0, 524291, 1, 0, 589828, 1, 0, 589827, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 131072, 2, 327684, 131072, 1, 262148, 131072, 1, 196612, 1, 0, 5, 1, 0, 131077, 1, 0, 262149, 131072, 1, 327685, 131072, 1, 393221, 131072, 2, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 589830, 65536, 1, 524294, 65536, 1, 458758, 65536, 1, 393222, 327680, 0, 327686, 131072, 1, 196614, 1, 0, -65529, 1, 0, 7, 1, 0, 327687, 131072, 1, 393223, 131072, 1, 458759, 131072, 1, 524295, 131072, 1, 589831, 131072, 1, 589832, 196608, 1, 524296, 196608, 1, 458760, 196608, 1, 393224, 262144, 0, 8, 1, 0, -65528, 1, 0, -65527, 1, 0, 9, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 65546, 1, 0, 10, 1, 0, -65526, 1, 0, -65525, 1, 0, 11, 1, 0, 12, 1, 0, 65548, 1, 0, 262156, 1, 0, 458764, 1, 0, 589836, 1, 0, 65547, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, 18, 1, 0, 17, 1, 0, 16, 1, 0, 14, 1, 0, 13, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 131089, 1, 0, 131088, 1, 0, 131087, 1, 0, 131086, 1, 0, 262157, 1, 0, 262158, 1, 0, 196623, 1, 0, 196625, 1, 0, 196626, 1, 0, 262161, 1, 0, 262160, 1, 0, 262159, 1, 0, 327693, 1, 0, 589837, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 524306, 1, 0, 458770, 1, 0, 393234, 1, 0, 327698, 1, 0, 327697, 1, 0, 327696, 1, 0, 327695, 1, 0, 327694, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 524304, 1, 0, 458768, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 65536, 1, 720903, 131072, 1, 720904, 196608, 1, 720905, 1, 0, 720907, 1, 0, 720909, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 720915, 1, 0, 720914, 1, 0, 720913, 1, 0, 720912, 1, 0, 720911, 1, 0, 720910, 1, 0, 786445, 1, 0, 786442, 1, 0, 786441, 1, 0, 786440, 196608, 1, 786439, 131072, 1, 786438, 65536, 1, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, 786432, 1, 0, 851967, 1, 0, 851966, 1, 0, 393216, 1, 0, 1, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -131066, 1, 0, -131067, 1, 0, -131068, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -262138, 1, 0, -262139, 1, 0, -262140, 1, 0, -196596, 1, 0, -196595, 1, 0, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -262125, 1, 0, -262126, 1, 0, -262127, 1, 0, -262128, 1, 0, -262129, 1, 0, -262130, 1, 0, -262131, 1, 0, -262132, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -327660, 1, 0, -262124, 1, 0, -196588, 1, 0, -131052, 1, 0, -196597, 1, 0, -196598, 1, 0, 262153, 131072, 1, 196618, 1, 0, 196621, 1, 0, 131085, 1, 0, 131081, 1, 0, 131080, 1, 0, 65542, 1, 0, 65544, 1, 0, 65545, 1, 0, 65543, 1, 0, 65541, 1, 0, 131075, 1, 0, 131076, 1, 0, 2, 1, 0, 65538, 1, 0, 65539, 1, 0, -196600, 1, 0, -262136, 1, 0, -262137, 1, 0, -327676, 1, 0, -327674, 1, 0, -327673, 1, 0, -327675, 1, 0, -196599, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -327669, 1, 0, -327670, 1, 0, -327671, 1, 0, 196619, 1, 0, 196620, 1, 0, 131084, 1, 0, 131083, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 1, 0, 720908, 1, 0, 786444, 1, 0, 786443, 1, 0, 720906, 1, 0, 655370, 1, 0, 589834, 1, 0, 524298, 1, 0, 458762, 1, 0, 589844, 1, 0, 655380, 1, 0, 655372, 1, 0, 131069, 1, 0, 131092, 1, 0, 196628, 1, 0, -327672, 1, 0)
layer_1/name = "cliffs"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(786442, 65536, 5, 720906, 65536, 5, 655370, 65536, 5, 589834, 65536, 5, 524298, 65536, 4, 262149, 262144, 4, 262150, 131072, 6, 262151, 131072, 6, 262152, 131072, 6, 262153, 131072, 6, 262154, 131072, 6, 327691, 65536, 6, 393228, 65536, 5, 524299, 131072, 4, 524300, 327680, 5, 458764, 65536, 5, 327692, 327680, 4, 262155, 327680, 4, 327684, 262144, 4, 327685, 196608, 6, 393220, 196608, 5, 458756, 196608, 5, 524292, 196608, 5, 589828, 196608, 5, 655364, 196608, 5, 720900, 196608, 5, 786436, 196608, 5, 65537, 65536, 5, 65538, 131072, 5, 65539, 131072, 5, 65540, 131072, 5, 65541, 131072, 5, 65542, 131072, 5, 65543, 131072, 5, 65544, 131072, 5, 65545, 131072, 5, 65546, 131072, 5, 65547, 196608, 5, 131083, 262144, 5, 131084, 131072, 4, 131085, 131072, 4, 131086, 131072, 4, 131087, 131072, 4, 196623, 131072, 5, 196622, 131072, 5, 196621, 131072, 5, 196620, 131072, 5, 131082, 131072, 5, 131081, 131072, 5, 131080, 131072, 5, 196615, 131072, 5, 196614, 131072, 5, 196613, 131072, 5, 196612, 131072, 5, 196611, 131072, 5, 196610, 131072, 5, 196616, 131072, 5, 196617, 131072, 5, 196618, 131072, 5, 196619, 131072, 5, 262156, 131072, 5, 262157, 131072, 5, 131074, 131072, 5, 131073, 65536, 5, 196609, 65536, 5, 262145, 65536, 5, 327681, 65536, 5, 393217, 327680, 5, 458753, 131072, 5, 524289, 131072, 5, 589825, 131072, 5, 655361, 131072, 5, 720897, 131072, 5, 786433, 131072, 5, 786434, 131072, 5, 786435, 131072, 5, 720899, 131072, 5, 655363, 131072, 5, 589827, 131072, 5, 524291, 131072, 5, 458755, 131072, 5, 393219, 131072, 5, 327683, 131072, 5, 262147, 131072, 5, 262146, 131072, 5, 327682, 131072, 5, 393218, 131072, 5, 458754, 131072, 5, 524290, 131072, 5, 589826, 131072, 5, 655362, 131072, 5, 720898, 131072, 5, 262148, 131072, 5, 131075, 131072, 5, 131076, 131072, 5, 131077, 131072, 5, 131078, 131072, 5, 131079, 131072, 5, 262159, 131072, 5, 262158, 131072, 5, 327694, 131072, 5, 393230, 131072, 5, 393229, 131072, 5, 458765, 131072, 5, 524301, 131072, 5, 589837, 131072, 5, 655373, 131072, 5, 720909, 131072, 5, 786445, 131072, 5, 786444, 131072, 5, 786443, 131072, 5, 720907, 131072, 5, 655371, 131072, 5, 589835, 131072, 5, 589836, 131072, 5, 655372, 131072, 5, 720908, 131072, 5, 720910, 131072, 5, 786446, 131072, 5, 786447, 131072, 5, 786448, 131072, 5, 786449, 131072, 5, 786450, 131072, 5, 720914, 131072, 5, 655378, 131072, 5, 655377, 131072, 5, 655376, 131072, 5, 655375, 131072, 5, 720911, 131072, 5, 655374, 131072, 5, 589839, 131072, 5, 589840, 131072, 5, 589841, 131072, 5, 589842, 131072, 5, 655379, 196608, 5, 720915, 196608, 5, 786451, 196608, 5, 720912, 131072, 5, 720913, 131072, 5, 589843, 196608, 5, 524306, 131072, 5, 458770, 131072, 5, 458771, 196608, 5, 393235, 196608, 5, 327699, 196608, 5, 262163, 196608, 5, 262162, 131072, 5, 262161, 131072, 5, 327697, 131072, 5, 327696, 131072, 5, 327695, 131072, 5, 393231, 131072, 5, 458767, 131072, 5, 458766, 131072, 5, 524302, 131072, 5, 589838, 131072, 5, 327693, 131072, 5, 524303, 131072, 5, 524304, 131072, 5, 524305, 131072, 5, 393234, 131072, 5, 393233, 131072, 5, 393232, 131072, 5, 458768, 131072, 5, 458769, 131072, 5, 524307, 196608, 5, 327698, 131072, 5, 262160, 131072, 5, 196624, 131072, 5, 196625, 131072, 5, 196626, 131072, 5, 196627, 196608, 5, 131091, 196608, 4, 131090, 131072, 4, 131089, 131072, 4, 131088, 131072, 4, 786432, 65536, 5, 720896, 65536, 5, 655360, 65536, 5, 589824, 65536, 5, 524288, 65536, 5, 458752, 65536, 5, 393216, 65536, 4, 2, 131072, 4, 3, 131072, 4, 4, 131072, 4, 5, 131072, 4, 6, 131072, 4, 7, 131072, 4, 8, 131072, 4, 9, 131072, 4, 10, 131072, 4, 1, 65536, 4, 11, 196608, 4)
layer_2/name = "ysort"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-131057, 655362, 7, -196595, 2, 5, -196591, 2, 5, -131067, 2, 5, -196589, 524290, 6)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(76, 51)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-1, 0, 1, 157, 23, 157, 23, 196, 66, 195, 64, 157, 88, 157, 88, 92, 94, 82, 121, 81, 120, 42, 108, 43, 103, 38, 103, 25, 18, 27, 18, 39, 16, 41, 1, 43, 41, -23, 129, -19, 184, 55, 181, 157, 160, 197, 127, 227, 4, 229, -22, 192, -37, 86, -29, 17, -12, -11, 15, -16)

[node name="player" parent="." instance=ExtResource("4_8leq4")]
position = Vector2(119, 198)

[node name="cliffside_exitpoint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_exitpoint"]
position = Vector2(119.5, 225.5)
shape = SubResource("RectangleShape2D_6qsho")

[node name="apple_tree" parent="." instance=ExtResource("6_t4w77")]
position = Vector2(149, 108)

[connection signal="body_entered" from="cliffside_exitpoint" to="." method="_on_cliffside_exitpoint_body_entered"]
[connection signal="body_exited" from="cliffside_exitpoint" to="." method="_on_cliffside_exitpoint_body_exited"]
